Fix editor scrollbars

--- a/index.css
+++ b/index.css
@@ -165,7 +165,7 @@ body {
 
 .cm-editor {
   flex: 1;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .cm-scroller {
